remove routerlink in links

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -112,10 +112,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/about-us"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   About
                 </a>
               </li>
@@ -123,10 +120,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/services"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Services
                 </a>
               </li>
@@ -134,10 +128,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/insights"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Insights
                 </a>
               </li>
@@ -145,10 +136,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/careers"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Careers
                 </a>
               </li>
@@ -158,10 +146,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/pro-training"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Pro-Training
                 </a>
               </li>
@@ -169,10 +154,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/contact-us"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Contact Us
                 </a>
               </li>
@@ -180,10 +162,7 @@
                 class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a
-                  routerLink="/locations"
-                  class="text-white no-underline hover:text-primary"
-                >
+                <a class="text-white no-underline hover:text-primary">
                   Locations
                 </a>
               </li>
