adding new cources

--- a/src/app/pages/pro-training/pro-training.component.html
+++ b/src/app/pages/pro-training/pro-training.component.html
@@ -146,7 +146,24 @@
         >
           <div class="flex items-center gap-4 md:min-h-28">
             <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
-              1. Certified Management Accountant (CMA)
+              1. Professional Financial Accountant (PFA)
+            </h3>
+          </div>
+          <div>
+            <p class="text-base md:text-xl">
+              PFA is designed to develop your knowledge of accounting standards
+              and practices. PFA body of knowledge will effectively enhance your
+              understanding of the underlying accounting concepts, principles
+              and their practical application.
+            </p>
+          </div>
+        </div>
+        <div
+          class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
+        >
+          <div class="flex items-center gap-4 md:min-h-28">
+            <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
+              2. Certified Management Accountant (CMA)
             </h3>
           </div>
           <div>
@@ -162,7 +179,7 @@
         >
           <div class="flex items-center gap-4 md:min-h-28">
             <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
-              2. Diploma in International Financial Reporting (DipIFR):
+              3. Diploma in International Financial Reporting (DipIFR):
             </h3>
           </div>
           <div>
@@ -178,7 +195,7 @@
         >
           <div class="flex items-center gap-4 md:min-h-28">
             <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
-              3. Advanced Diploma in International Taxation (ADIT):
+              4. Advanced Diploma in International Taxation (ADIT):
             </h3>
           </div>
           <div>
@@ -193,7 +210,7 @@
         >
           <div class="flex items-center gap-4 md:min-h-28">
             <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
-              4. Financial Modeling and Analyst Association (FMAA):
+              5. Financial Modeling and Analyst Association (FMAA):
             </h3>
           </div>
           <div>
@@ -203,6 +220,23 @@
               The FMAA Certificate covers key areas such as financial analysis,
               risk management, and strategic planning, equipping you with the
               skills needed to excel in the industry.
+            </p>
+          </div>
+        </div>
+        <div
+          class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
+        >
+          <div class="flex items-center gap-4 md:min-h-28">
+            <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
+              6. TAX:
+            </h3>
+          </div>
+          <div>
+            <p class="text-base md:text-xl">
+              This program equips professionals with essential skills in income
+              tax, VAT, payroll, stamp, and real estate taxes, along with
+              training on ETA submissions, tax inspections, and electronic
+              invoicing.
             </p>
           </div>
         </div>
