updating minor changes

--- a/src/app/pages/pro-training/pro-training.component.html
+++ b/src/app/pages/pro-training/pro-training.component.html
@@ -335,36 +335,36 @@
   </section>
   <section class="bg-primary py-10 text-white">
     <div class="mx-auto max-w-screen-xl p-4">
-      <h2 class="mt-0 p-2 pl-4 text-center text-4xl font-bold">
+      <h2 class="mt-0 p-2 pl-4 text-center text-5xl font-bold">
         Why Choose ATC Pro Training ?
       </h2>
       <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
         <div class="p-4">
           <div class="flex items-center gap-3">
-            <i class="fa-regular fa-circle-check text-5xl text-white"></i>
+            <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Expert Instructors</h3>
           </div>
-          <p class="text-xl">
+          <p class="text-xl text-gray-200">
             Our courses are led by industry experts with extensive experience
             and knowledge, ensuring you receive the highest quality education.
           </p>
         </div>
         <div class="p-4">
           <div class="flex items-center gap-3">
-            <i class="fa-regular fa-circle-check text-5xl text-white"></i>
+            <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Flexible Learning Options</h3>
           </div>
-          <p class="text-xl">
+          <p class="text-xl text-gray-200">
             We offer both in-person and online training options to accommodate
             your schedule and learning preferences.
           </p>
         </div>
         <div class="p-4">
-          <div class="flex items-center gap-3">
-            <i class="fa-regular fa-circle-check text-5xl text-white"></i>
+          <div class="flex items-start gap-3">
+            <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Comprehensive Curriculum</h3>
           </div>
-          <p class="text-xl">
+          <p class="text-xl text-gray-200">
             Our courses are meticulously designed to cover all essential topics
             and provide practical insights, preparing you for real-world
             challenges.
@@ -376,12 +376,12 @@
       >
         <div class="p-4">
           <div class="flex items-center gap-3">
-            <i class="fa-regular fa-circle-check text-5xl text-white"></i>
+            <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">
               Certification and Recognition
             </h3>
           </div>
-          <p class="text-xl">
+          <p class="text-xl text-gray-200">
             Upon successful completion of our courses, you will receive
             certificates that are recognized globally, enhancing your
             professional credibility.
@@ -389,10 +389,10 @@
         </div>
         <div class="p-4">
           <div class="flex items-center gap-3">
-            <i class="fa-regular fa-circle-check text-5xl text-white"></i>
+            <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Latest education technology</h3>
           </div>
-          <p class="text-xl">
+          <p class="text-xl text-gray-200">
             Our cutting-edge educational technology provides an immersive
             learning experience. The advanced tools and platforms we have ensure
             that our learning process is engaging and effective, preparing our
@@ -511,7 +511,7 @@
                 </div>
               </div>
             </div>
-            <p class="text-xl text-primary lg:pl-7">
+            <p class="text-xl text-grayTitle lg:pl-7">
               Our programs are tailored to help you achieve international
               certifications and advance your career, whether you are looking to
               deepen your expertise in your current field or expand into new
