--- a/src/app/pages/pro-training/pro-training.component.html
+++ b/src/app/pages/pro-training/pro-training.component.html
@@ -4,7 +4,7 @@
   <section id="landing_section" class="h-[60vh]">
     <div
       class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
-      style="background-image: url(&quot;pro-training/landing_image2.jpg&quot;)"
+      style="background-image: url(&quot;pro-training/landing_image.webp&quot;)"
     >
       <div class="absolute inset-0 bg-black/50"></div>
       <div class="relative flex h-full w-full items-center justify-center">
@@ -42,7 +42,7 @@
             <div
               class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
               style="
-                background-image: url(&quot;pro-training/professional_education.jpeg&quot;);
+                background-image: url(&quot;pro-training/professional_education.webp&quot;);
               "
             >
               <div
@@ -59,7 +59,7 @@
               Professional Education
             </h3>
 
-            <p class="text-xl text-grayTitle lg:pl-7">
+            <p class="mb-10 text-xl text-grayTitle lg:pl-7">
               Comprehensive courses designed to equip you with industry-relevant
               knowledge and skills.
             </p>
@@ -70,7 +70,7 @@
             </h3>
 
             <p class="text-xl text-grayTitle lg:pl-7">
-              Specialized programs in key areas:
+              Specialized courses in key areas:
             </p>
 
             <ul class="list-none p-0 lg:pl-7">
@@ -107,24 +107,13 @@
               </li>
             </ul>
           </div>
-
-          <!-- <div
-            class="mb-4 mt-auto flex items-center justify-center lg:block lg:pl-7"
-          >
-            <a
-              href="https://atcprotraining.com/"
-              target="_blank"
-              class="rounded-lg bg-black px-20 py-3 text-xl font-bold text-white no-underline hover:bg-primary"
-              >Enroll Now</a
-            >
-          </div> -->
         </div>
 
         <div class="hidden lg:block lg:w-1/2">
           <div
             class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
             style="
-              background-image: url(&quot;pro-training/professional_education.jpeg&quot;);
+              background-image: url(&quot;pro-training/professional_education.webp&quot;);
             "
           >
             <div
@@ -140,6 +129,21 @@
 
   <section class="bg-[#F9F7F7] py-10">
     <div class="mx-auto max-w-screen-xl p-4">
+      <h2
+        class="my-0 mb-5 border-0 border-l-[12px] border-solid border-primary p-4 text-3xl font-bold md:text-4xl"
+      >
+        Tailored and Specialized Training Solutions
+      </h2>
+      <div class="mx-auto max-w-screen-lg text-center text-lg text-grayTitle">
+        <p class="mb-10">
+          we offer specialized courses for individuals and customized corporate
+          training to meet your business's unique needs. Our programs cover a
+          range of topics to enhance skills, boost productivity, and address
+          team skill gaps. Contact us for a personalized consultation to design
+          the ideal course for your team.
+          <br /><span class="font-bold"> Here are our current courses: </span>
+        </p>
+      </div>
       <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
         <div
           class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
@@ -228,15 +232,29 @@
         >
           <div class="flex items-center gap-4 md:min-h-28">
             <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
-              6. TAX:
+              6. Taxation Course (CTPro):
             </h3>
           </div>
           <div>
             <p class="text-base md:text-xl">
-              This program equips professionals with essential skills in income
-              tax, VAT, payroll, stamp, and real estate taxes, along with
-              training on ETA submissions, tax inspections, and electronic
-              invoicing.
+              This program equips professionals with essential skills in
+              Corporate Tax, income tax, VAT(value added tax), payroll, stamp,
+              and real estate taxes, along with training on ETA submissions, tax
+              inspections, and electronic invoicing.
+            </p>
+          </div>
+        </div>
+        <div
+          class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
+        >
+          <div class="flex items-center gap-4 md:min-h-28">
+            <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
+              7. Cost:
+            </h3>
+          </div>
+          <div>
+            <p class="text-base md:text-xl">
+              <!-- to be filled -->
             </p>
           </div>
         </div>
@@ -253,7 +271,7 @@
           <div
             class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
             style="
-              background-image: url(&quot;pro-training/future_offerings.jpg&quot;);
+              background-image: url(&quot;pro-training/future_offerings.webp&quot;);
             "
           ></div>
         </div>
@@ -263,15 +281,15 @@
               <div
                 class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
                 style="
-                  background-image: url(&quot;pro-training/future_offerings.jpg&quot;);
+                  background-image: url(&quot;pro-training/future_offerings.webp&quot;);
                 "
               ></div>
             </div>
-            <h2
+            <h3
               class="mt-5 border-0 border-l-[12px] border-solid border-primary p-4 text-4xl font-bold lg:mt-0"
             >
               Future Offerings
-            </h2>
+            </h3>
 
             <ul class="list-none space-y-2 p-0 lg:pl-7">
               <li class="flex items-start gap-2">
@@ -336,9 +354,9 @@
   <section class="bg-primary py-10 text-white">
     <div class="mx-auto max-w-screen-xl p-4">
       <h2 class="mt-0 p-2 pl-4 text-center text-5xl font-bold">
-        Why Choose ATC Pro Training ?
+        Why ATC Pro Training ?
       </h2>
-      <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
+      <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
         <div class="p-4">
           <div class="flex items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
@@ -355,7 +373,7 @@
             <h3 class="m-0 text-2xl font-bold">Flexible Learning Options</h3>
           </div>
           <p class="text-xl text-gray-200">
-            We offer both in-person and online training options to accommodate
+            We offer both offline and online training options to accommodate
             your schedule and learning preferences.
           </p>
         </div>
@@ -366,13 +384,13 @@
           </div>
           <p class="text-xl text-gray-200">
             Our courses are meticulously designed to cover all essential topics
-            and provide practical insights, preparing you for real-world
-            challenges.
+            and provide practical insights, equipping you to excel in your
+            professional endeavors.
           </p>
         </div>
       </div>
       <div
-        class="mx-auto grid max-w-screen-lg grid-cols-1 gap-8 md:grid-cols-2"
+        class="mx-auto grid max-w-screen-lg grid-cols-1 gap-8 lg:grid-cols-2"
       >
         <div class="p-4">
           <div class="flex items-center gap-3">
@@ -403,7 +421,7 @@
     </div>
   </section>
 
-  <section class="py-10">
+  <!-- <section class="py-10">
     <div class="mx-auto max-w-screen-xl p-4">
       <h2 class="text-center text-4xl text-primary">
         Corporate Training Programs
@@ -478,7 +496,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="bg-[#F9F7F7] py-10">
     <div class="mx-auto max-w-screen-xl p-4">
@@ -487,11 +505,11 @@
       >
         <div class="flex h-full w-full flex-col gap-10 lg:w-1/2">
           <div>
-            <h2
+            <h3
               class="mt-0 border-0 border-l-[12px] border-solid border-primary p-4 text-4xl font-bold"
             >
               Delivery Modes
-            </h2>
+            </h3>
 
             <p class="text-lg text-grayTitle lg:pl-7">
               Available both online and offline to suit your learning
@@ -501,7 +519,7 @@
               <div
                 class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
                 style="
-                  background-image: url(&quot;pro-training/online.jpg&quot;);
+                  background-image: url(&quot;pro-training/online.webp&quot;);
                 "
               >
                 <div
@@ -524,7 +542,7 @@
         <div class="hidden lg:block lg:w-1/2">
           <div
             class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
-            style="background-image: url(&quot;pro-training/online.jpg&quot;)"
+            style="background-image: url(&quot;pro-training/online.webp&quot;)"
           >
             <div
               class="absolute bottom-10 left-8 bg-primary px-16 py-3 text-2xl font-bold text-white"
@@ -539,40 +557,48 @@
 
   <section
     class="relative left-0 top-0 w-full bg-cover bg-center bg-no-repeat"
-    style="background-image: url(&quot;pro-training/latest_training.jpeg&quot;)"
+    style="background-image: url(&quot;pro-training/latest_training.webp&quot;)"
   >
     <div class="mx-auto max-w-screen-xl px-4 py-8">
       <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
-        <div>
+        <div class="relative left-0 top-0">
           <p-image
-            src="pro-training/training5.jpeg"
-            alt="Image"
+            src="pro-training/training1.webp"
+            alt="Professional Training"
             width="100%"
+            height="auto"
             [preview]="true"
+            loading="lazy"
           />
         </div>
         <div>
           <p-image
-            src="pro-training/training2.jpeg"
-            alt="Image"
+            src="pro-training/training2.webp"
+            alt="Professional Training"
             width="100%"
+            height="auto"
             [preview]="true"
+            loading="lazy"
           />
         </div>
         <div>
           <p-image
-            src="pro-training/training3.jpeg"
-            alt="Image"
+            src="pro-training/training3.webp"
+            alt="Professional Training"
             width="100%"
+            height="auto"
             [preview]="true"
+            loading="lazy"
           />
         </div>
         <div>
           <p-image
-            src="pro-training/training4.jpeg"
-            alt="Image"
+            src="pro-training/training4.webp"
+            alt="Professional Training"
             width="100%"
+            height="auto"
             [preview]="true"
+            loading="lazy"
           />
         </div>
       </div>
@@ -586,24 +612,23 @@
       <div
         class="my-auto flex flex-col items-center gap-6 p-4 md:w-1/2 md:items-start"
       >
-        <h2
+        <h3
           class="my-0 w-full border-0 border-l-[12px] border-solid border-primary p-4 text-4xl font-bold"
         >
           How to enroll
-        </h2>
+        </h3>
         <p class="mb-4 text-xl text-grayTitle lg:pl-7">
           Enrolling in our training programs is easy. Simply visit our
           enrollment page or contact our training coordinator at
           <a
             href="mailto:training@atc.com.eg"
-            class="cursor-pointer text-xl text-grayTitle no-underline hover:text-primary hover:underline"
+            class="cursor-pointer text-xl text-grayTitle underline hover:text-primary hover:underline"
           >
             training&#64;atc.com.eg
           </a>
           or call us at (15673) for more information.
         </p>
         <div class="lg:pl-7">
-          <!-- https://atcprotraining.com/atc-pro-training-course-registration-form -->
           <a
             href="https://atcprotraining.com/"
             target="_blank"
@@ -616,80 +641,76 @@
         <div
           class="relative left-0 top-0 h-full w-full bg-cover bg-center bg-no-repeat"
           style="
-            background-image: url(&quot;pro-training/how_to_enroll.jpeg&quot;);
+            background-image: url(&quot;pro-training/how_to_enroll.webp&quot;);
           "
         ></div>
       </div>
     </div>
   </section>
 
-  <section
-    class="relative flex h-fit items-center justify-center bg-black py-10 text-center md:h-[430px]"
-  >
-    <div class="absolute inset-0">
-      <img
-        src="pro-training/contact_pro_training.jpg"
-        alt="contact_us"
-        class="h-full w-full object-cover"
-      />
-      <div class="absolute inset-0 bg-black opacity-80"></div>
-    </div>
-    <div class="relative z-10 mx-auto max-w-screen-xl px-4 py-10 text-white">
-      <p class="mb-5 text-2xl font-bold lg:text-3xl">Contact us</p>
-      <p class="mb-8 lg:text-xl">
-        For any inquiries or additional information about our training programs,
-        please reach out to us at:
-      </p>
-      <div class="mb-6 grid grid-cols-1 gap-5 sm:grid-cols-2 md:grid-cols-4">
-        <div class="p-3 text-center">
-          <i class="fa-solid fa-envelope mb-4 text-4xl text-white"></i>
-          <p class="mb-4 text-xl">Email</p>
-          <p class="text-sm">info&#64;atcprotraining.com</p>
-        </div>
-        <div class="p-3 text-center">
-          <i class="fa-solid fa-phone-volume mb-4 text-4xl text-white"></i>
-          <p class="mb-4 text-xl">Phone</p>
-          <p class="text-sm">+20 0112636390</p>
-        </div>
-        <div class="p-3 text-center">
-          <i class="fa-solid fa-location-dot mb-4 text-4xl text-white"></i>
-          <p class="mb-4 text-xl">Address</p>
-          <p class="text-sm">
-            48 Giza St., 5th Floor, Appt No. 52, FI - Orman Tower Giza,Giza GE
-          </p>
-        </div>
-        <div class="p-3 text-center">
-          <i class="fa-solid fa-square-check mb-4 text-4xl text-white"></i>
-          <p class="mb-4 text-xl">Follow us</p>
-          <div class="flex items-center justify-center gap-4">
-            <a
-              href="https://www.facebook.com/ATCProTraining"
-              target="_blank"
-              class="text-white hover:text-primary"
-            >
-              <i class="fa-brands fa-facebook-square text-xl"></i>
-            </a>
-            <a
-              href="https://www.linkedin.com/company/atcprotraining"
-              target="_blank"
-              class="text-white hover:text-primary"
-            >
-              <i class="fa-brands fa-linkedin text-xl"></i>
-            </a>
-            <a
-              href="https://www.instagram.com/atcprotraining"
-              target="_blank"
-              class="text-white hover:text-primary"
-            >
-              <i class="fa-brands fa-instagram text-xl"></i>
-            </a>
+  <section class="relative flex items-center justify-center text-center">
+    <div
+      class="relative left-0 top-0 h-fit w-full bg-cover bg-center bg-no-repeat"
+      style="background-image: url(pro-training/contact_pro_training.webp)"
+    >
+      <div class="absolute inset-0 bg-black/80"></div>
+      <div class="relative mx-auto max-w-screen-xl p-4 text-white">
+        <p class="mb-5 text-2xl font-bold lg:text-3xl">Contact us</p>
+        <p class="mb-8 lg:text-xl">
+          For any inquiries or further details about our training programs,
+          please reach us at:
+        </p>
+        <div class="mb-6 grid grid-cols-1 gap-5 sm:grid-cols-2 md:grid-cols-4">
+          <div class="p-3 text-center">
+            <i class="fa-solid fa-envelope mb-4 text-4xl text-white"></i>
+            <p class="mb-4 text-xl">Email</p>
+            <p class="text-sm">info&#64;atcprotraining.com</p>
+          </div>
+          <div class="p-3 text-center">
+            <i class="fa-solid fa-phone-volume mb-4 text-4xl text-white"></i>
+            <p class="mb-4 text-xl">Phone</p>
+            <p class="text-sm">+20 0112636390</p>
+          </div>
+          <div class="p-3 text-center">
+            <i class="fa-solid fa-location-dot mb-4 text-4xl text-white"></i>
+            <p class="mb-4 text-xl">Address</p>
+            <p class="text-sm">
+              48 Giza St., 5th Floor, Appt No. 52, FI - Orman Tower Giza,Giza GE
+            </p>
+          </div>
+          <div class="p-3 text-center">
+            <i class="fa-solid fa-square-check mb-4 text-4xl text-white"></i>
+            <p class="mb-4 text-xl">Follow us</p>
+            <div class="flex items-center justify-center gap-4">
+              <a
+                href="https://www.facebook.com/ATCProTraining"
+                target="_blank"
+                class="text-white hover:text-primary"
+              >
+                <i class="fa-brands fa-facebook-square text-xl"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/company/atcprotraining"
+                target="_blank"
+                class="text-white hover:text-primary"
+              >
+                <i class="fa-brands fa-linkedin text-xl"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/atcprotraining"
+                target="_blank"
+                class="text-white hover:text-primary"
+              >
+                <i class="fa-brands fa-instagram text-xl"></i>
+              </a>
+            </div>
           </div>
         </div>
+        <p>
+          Join ATC Pro Online Training today and take the next step in advancing
+          your professional career!
+        </p>
       </div>
-      <p>
-        Join ATC Pro Online Training today and take the next step in advancing
-        your professional career!
-      </p>
     </div>
   </section>
 </main>
