updating future offering title

--- a/src/app/pages/pro-training/pro-training.component.html
+++ b/src/app/pages/pro-training/pro-training.component.html
@@ -288,7 +288,7 @@
             <h3
               class="mt-5 border-0 border-l-[12px] border-solid border-primary p-4 text-4xl font-bold lg:mt-0"
             >
-              Future Offerings
+              Upcoming Training Programs
             </h3>
 
             <ul class="list-none space-y-2 p-0 lg:pl-7">
